tests/baselines/reference/errorOnContextuallyTypedReturnType.errors.txt
tests/cases/compiler/errorOnContextuallyTypedReturnType.ts(1,5): error TS2322: Type '() => 无值' is not assignable to type '() => 真假'.
  Type '无值' is not assignable to type '真假'.
tests/cases/compiler/errorOnContextuallyTypedReturnType.ts(2,37): error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.


==== tests/cases/compiler/errorOnContextuallyTypedReturnType.ts (2 errors) ====
    var n1: () => boolean = function () { }; // expect an error here
        ~~
!!! error TS2322: Type '() => 无值' is not assignable to type '() => 真假'.
!!! error TS2322:   Type '无值' is not assignable to type '真假'.
    var n2: () => boolean = function ():boolean { }; // expect an error here
                                        ~~~~~~~
!!! error TS2355: A function whose declared type is neither 'void' nor 'any' must return a value.
    